--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "1.4.16",
+  "version": "1.4.17",
   "name": "Casper Signer",
   "author": "https://casper.network",
   "description": "Casper Signer is the official non-custodial wallet that allows you to manage private keys and sign transactions on Casper Network",
@@ -73,9 +73,7 @@
         "*://the-swappery.com/*",
         "*://*.the-swappery.com/*",
         "*://caspernft.market/*",
-        "*://*.caspernft.market/*",
-        "*://casper-test.com/*",
-        "*://*.casper-test.com/*",
+        "*://*.caspernft.market/*",                
         "*://casperarmy.org/*",
         "*://*.casperarmy.org/*",
         "*://casperarmy.io/*",
@@ -92,7 +90,11 @@
         "*://*.kunftmarketplace.io/*",
         "*://kunftmarketplace.io/*",
         "*://crdao.ossa.dev/*",
-        "*://casper-vesting.vercel.app/*"
+        "*://casper-vesting.vercel.app/*",
+        "*://*.eggforce.io/*",
+        "*://eggforce.io/*",
+        "*://*.playcasper.io/*",
+        "*://playcasper.io/*"
       ],
       "js": [
         "./scripts/content/content.js"
