--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "1.4.20",
+  "version": "1.4.21",
   "name": "Casper Signer",
   "author": "https://casper.network",
   "description": "Casper Signer is the official non-custodial wallet that allows you to manage private keys and sign transactions on Casper Network",
@@ -106,7 +106,14 @@
         "*://ggxchain.io/*",
         "*://*.ggxchain.io/*",
         "*://chainlendar.io/*",
-        "*://*.chainlendar.io/*"
+        "*://*.chainlendar.io/*",
+        "*://ultimatedivision.com/*",
+        "*://*.ultimatedivision.com/*",
+        "*://dev.dmusic.io/*",
+        "*://staging.dmusic.io/*",
+        "*://beta.dmusic.io/*",
+        "*://dmusic.io/*",
+        "*://*.dmusic.io/*"
       ],
       "js": [
         "./scripts/content/content.js"
