--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "1.4.23",
+  "version": "1.4.24",
   "name": "Casper Signer",
   "author": "https://casper.network",
   "description": "Casper Signer is the official non-custodial wallet that allows you to manage private keys and sign transactions on Casper Network",
@@ -103,8 +103,8 @@
         "*://cspr.fyi/*",
         "*://*.cspr.fyi/*",
         "*://ve.cspr.university/*",
-        "*://ggxchain.io/*",
-        "*://*.ggxchain.io/*",
+        "*://tricorn.network/*",
+        "*://*.tricorn.network/*",
         "*://chainlendar.io/*",
         "*://*.chainlendar.io/*",
         "*://ultimatedivision.com/*",
@@ -118,7 +118,11 @@
         "*://*.casperswap.xyz/*",
         "*://casperswap.com/*",
         "*://*.casperswap.com/*",
-        "*://casper.team.finance/*"
+        "*://casper.team.finance/*",
+        "*://droplinked.com/*",
+        "*://*.droplinked.com/*",
+        "*://bithotel.io/*",
+        "*://*.bithotel.io/*"
       ],
       "js": [
         "./scripts/content/content.js"
