--- a/.github/ISSUE_TEMPLATE/whitelisting_request.yml
+++ b/.github/ISSUE_TEMPLATE/whitelisting_request.yml
@@ -8,10 +8,15 @@ body:
   - type: markdown
     attributes:
       value: |
-        Casper Signer will soon be replaced by Casper Wallet.
-        If you are an existing Signer user looking to change/update, we recommend that you migrate to Casper Wallet when it is launched. 
-        If you are building a new DApp or Application, we recommend that you directly integrate it with Casper Wallet.
-        For more details, please refer to the [Casper Wallet Documentation](https://casperwallet.io/develop).        
+        !! IMPORTANT NOTE: PLEASE READ !!
+        
+        Casper Signer is going to be deprecated soon, and new whitelisting requests are no longer accepted.
+        
+        The [Casper Wallet](https://www.casperwallet.io/) replaces the Casper Signer and offers the same functionalities with more advanced features and up-to-date support.
+        
+        For new and existing users, and dApp developers looking to integrate signing functionality with their applications, please transition to Casper Wallet.
+        
+        You can find the necessary developer resources at https://www.casperwallet.io/develop        
   - type: input
     id: project
     attributes:
